# newt_stub

./: Cargo.toml  Makefile  OVMF_CODE.fd  OVMF_VARS.fd
src/: main.rs
